change list, update nf e many request payments
